--- a/module2/index.html
+++ b/module2/index.html
@@ -4,42 +4,38 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assignment Solution for Module 2</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Module 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Notable Mathematicians</h1>
+    <h1>Famous Female Musicians</h1>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <section class="lebesgue">
-                <h2>Henri Lebesgue</h2>
+            <section class="beyonce">
+                <h2>Beyonce</h2>
                 <p>
-                    Henri Lebesgue was born on 28 June 1875 in Beauvais, Oise. Lebesgue's father was a typesetter and his mother was a school teacher. His parents assembled at home a library that the young Henri was able to use. His father died of tuberculosis when Lebesgue
-                    was still very young and his mother had to support him by herself. As he showed a remarkable talent for mathematics in primary school, one of his instructors arranged for community support to continue his education at the Collège de
-                    Beauvais and then at Lycée Saint-Louis and Lycée Louis-le-Grand in Paris.
+                    Beyoncé Giselle Knowles-Carter, born September 4, 1981,is an American singer, songwriter, producer, and actress. Born and raised in Houston, Texas, Beyoncé performed in various singing and dancing competitions as a child. She rose to fame in the late 1990s as lead singer of the R&B girl-group Destiny's Child. Managed by her father, Mathew Knowles, the group became one of the world's best-selling girl groups in history. Their hiatus saw Beyoncé's theatrical film debut in Austin Powers in Goldmember (2002) and the release of her debut album, Dangerously in Love (2003). The album established her as a solo artist worldwide, debuting at number one on the US Billboard 200 chart and earning five Grammy Awards.
                 </p>
             </section>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <section class="fubini">
-                <h2>Guido Fubini</h2>
+            <section class="swift">
+                <h2>Taylor Swift</h2>
                 <p>
-                    Born in Venice, he was steered towards mathematics at an early age by his teachers and his father, who was himself a teacher of mathematics. In 1896 he entered the Scuola Normale Superiore di Pisa, where he studied under the notable mathematicians Ulisse
-                    Dini and Luigi Bianchi. He gained some early fame when his 1900 doctoral thesis, entitled Clifford's parallelism in elliptic spaces, was discussed in a widely read work on differential geometry published by Bianchi in 1902.
+                    Taylor Alison Swift (born December 13, 1989) is an American singer-songwriter. One of the world's leading contemporary recording artists, she is known for narrative songs about her personal life, which have received widespread media coverage.Born and raised in Pennsylvania, Swift moved to Nashville, Tennessee at the age of 14 to pursue a career in country music.Buoyed by the success of pop crossover singles "Love Story" and "You Belong with Me", Fearless became the best-selling album of 2009 in the US. The album won four Grammy Awards, with Swift becoming the youngest Album of the Year winner.
                 </p>
             </section>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
-            <section class="luzin">
-                <h2>Nikolai Luzin</h2>
+            <section class="wine">
+                <h2>Amy Winehouse</h2>
                 <p>
-                    Nikolai Nikolaevich Luzin (also spelled Lusin;   9 December 1883 – 28 January 1950) was a Soviet/Russian mathematician known for his work in descriptive set theory and aspects of mathematical analysis with strong connections to point-set topology. He was
-                    the eponym of Luzitania, a loose group of young Moscow mathematicians of the first half of the 1920s. They adopted his set-theoretic orientation, and went on to apply it in other areas of mathematics.
+                    Amy Jade Winehouse (14 September 1983 – 23 July 2011) was an English singer and songwriter. She was known for her deep, expressive contralto vocals and her eclectic mix of musical genres, including soul(sometimes labelled as blue-eyed soul and neo soul),rhythm and blues,and jazz.Winehouse has been described as "the pre-eminent vocal talent of her generation" and "the last real individualist around."
+
                 </p>
             </section>
         </div>
     </div>
 </body>
-
 </html>
