--- a/module2/index.html
+++ b/module2/index.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section class="beyonce">
-                <h2>Beyonce</h2>
+                <h2>Beyoncé</h2>
                 <p>
                     Beyoncé Giselle Knowles-Carter, born September 4, 1981,is an American singer, songwriter, producer, and actress. Born and raised in Houston, Texas, Beyoncé performed in various singing and dancing competitions as a child. She rose to fame in the late 1990s as lead singer of the R&B girl-group Destiny's Child. Managed by her father, Mathew Knowles, the group became one of the world's best-selling girl groups in history. Their hiatus saw Beyoncé's theatrical film debut in Austin Powers in Goldmember (2002) and the release of her debut album, Dangerously in Love (2003). The album established her as a solo artist worldwide, debuting at number one on the US Billboard 200 chart and earning five Grammy Awards.
                 </p>
