--- a/module2/index.html
+++ b/module2/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Module 2</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Module 2 Solution</title>
 </head>
-
 <body>
-    <h1>Famous Female Musicians</h1>
+    <h1>Our Menu</h1>
     <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <section class="beyonce">
-                <h2>Beyoncé</h2>
-                <p>
-                    Beyoncé Giselle Knowles-Carter, born September 4, 1981,is an American singer, songwriter, producer, and actress. Born and raised in Houston, Texas, Beyoncé performed in various singing and dancing competitions as a child. She rose to fame in the late 1990s as lead singer of the R&B girl-group Destiny's Child. Managed by her father, Mathew Knowles, the group became one of the world's best-selling girl groups in history. Their hiatus saw Beyoncé's theatrical film debut in Austin Powers in Goldmember (2002) and the release of her debut album, Dangerously in Love (2003). The album established her as a solo artist worldwide, debuting at number one on the US Billboard 200 chart and earning five Grammy Awards.
-                </p>
-            </section>
+    <div class="container col-lg-4 col-md-6 col-sm-12">
+        <section>
+        <div id="chicken">
+            Chicken
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <section class="swift">
-                <h2>Taylor Swift</h2>
-                <p>
-                    Taylor Alison Swift (born December 13, 1989) is an American singer-songwriter. One of the world's leading contemporary recording artists, she is known for narrative songs about her personal life, which have received widespread media coverage.Born and raised in Pennsylvania, Swift moved to Nashville, Tennessee at the age of 14 to pursue a career in country music.Buoyed by the success of pop crossover singles "Love Story" and "You Belong with Me", Fearless became the best-selling album of 2009 in the US. The album won four Grammy Awards, with Swift becoming the youngest Album of the Year winner.
-                </p>
-            </section>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+        </p>
+        </section>
+    </div>
+    <div class="container col-lg-4 col-md-6 col-sm-12">
+        <section>
+        <div id="beef">
+            Beef
         </div>
-        <div class="col-lg-4 col-md-12 col-sm-12">
-            <section class="wine">
-                <h2>Amy Winehouse</h2>
-                <p>
-                    Amy Jade Winehouse (14 September 1983 – 23 July 2011) was an English singer and songwriter. She was known for her deep, expressive contralto vocals and her eclectic mix of musical genres, including soul(sometimes labelled as blue-eyed soul and neo soul),rhythm and blues,and jazz.Winehouse has been described as "the pre-eminent vocal talent of her generation" and "the last real individualist around."
-
-                </p>
-            </section>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+        </p>
+        </section>
+    </div>
+    <div class="container col-lg-4 col-md-12 col-sm-12">
+        <section>
+        <div id="sushi">
+            Sushi
         </div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+        </p>
+        </section>
+    </div>
     </div>
 </body>
 </html>
